Improve api
